优化类加载器